# vella-substrate

./: .gitignore  AI_INTEGRATION_PROMPTING.md  CHANGELOG.md  CITATION.cff  CODE_OF_CONDUCT.md  CONTRIBUTING.md  DEPLOYMENT.md  README.md  SECURITY.md
.github/workflows/: lint-schemas.yml  publish.yml  test-sdk.yml  verify-test-vectors.yml
benchmarks/: README.md  bench.js  bench.py  run.sh
benchmarks/results/: macos-arm64-m2pro.json
examples/: README.md  allowed-bundle.json  denied-bundle.json  example-signing.pub  node-quickstart.js  python-quickstart.py  tampered-bundle.json  verify-a-bundle.js  walkthrough.md
policy/: POLICY_MATRIX.md
sdk/node/: LICENSE  README.md  evaluator.js  index.js  package-lock.json  package.json  policy.js  proof.js
sdk/node/test/: evaluator.test.js  proof.test.js
sdk/python/: README.md  pyproject.toml
sdk/python/tests/: test_custom_evaluator.py  test_evaluator.py  test_proof.py
sdk/python/tests/fixtures/: test-signing-private.pem  test-signing-public.pem
sdk/python/vella/: __init__.py  evaluator.py  policy.py  proof.py
spec/: icd.md  reason-codes.md  threat-model.md
spec/schemas/: export.json  icd.json  proof.json
test-vectors/: README.md
test-vectors/tampered/: README.md  tampered-bundle-hash.json  tampered-envelope-field.json  tampered-signature.json
test-vectors/valid/: allowed-decision-v1.json  denied-evidence-missing-v1.json  denied-fast-v1.json
verify/: README.md  verify.js  verify.py  verify.sh
verify/test-vectors/valid/: README.md  allowed-decision-v1.json  denied-fast-v1.json
(+2 files in other folders)
